@@ -1,6 +1,9 @@
 New in v1.1.1 (????/??/??)
 --------------------------
 
+rdiff-backup now writes SHA1 sums into its mirror_metadata file for
+all regular files.
+
 Applied Alec Berryman's patch to update the no-compression regexp.
 
 Alec Berryman's fs_abilities patch is supposed to help with AFS.
